Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjBooleanRetundefined.quorum
class Main
    action Main
        boolean one = true
        Boolean two
        two:SetValue(true)
        Yoda<boolean, Boolean, undefined> yoda
        undefined ret = yoda:useForce(one, two)
        output "passed"
     end
end
