Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjObjBooleanRetundefinedFail.quorum
class Main
    action Main
        Boolean one
        one:SetValue(true)
        Boolean two
        two:SetValue(true)
        Yoda<Boolean, Boolean, undefined> yoda
        boolean wrongRet = yoda(one, two)
     end
end
